--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - fix-nightly-build
 
 jobs:
   build:
@@ -13,4 +14,4 @@ jobs:
     needs: build
     secrets: inherit
     with:
-      url: ${{ needs.build.outputs.artifact_url }}
+      url: ${{ needs.build.outputs.artifacts_url }}
